--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer" xmlns="http://www.w3.org/1999/html">
-  <a class="footer_item" href="/about/">about</a>
+  <a class="footer_item" href="/contact/">contact</a>
   <a class="footer_item" href="/thanks/">ack</a>
+  <a class="footer_item" href="https://github.com/johnsosoka">github</a>
   <a class="footer_item" href="/feed.xml">rss</a>
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
   <small class="footer_copyright">
