--- a/website/_includes/notes_posts.html
+++ b/website/_includes/notes_posts.html
@@ -1,5 +1,5 @@
 <h3 class="posts-item-note" aria-label="Recent Posts">{{ include.post_collection_title }}</h3>
-{%- for note in site.notes limit: include.post_display_limit -%}
+{%- for note in site.notes -%}
 <article class="post-item">
   <span class="post-item-date">{{ note.date | date: "%b %d, %Y" }}</span>
   <h3 class="post-item-title">
