--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -3,7 +3,7 @@
   <a class="footer_item" href="/thanks/">ack</a>
   <a class="footer_item" href="https://github.com/johnsosoka">github</a>
   <a class="footer_item" href="/feed.xml">rss</a>
-  <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
+  <span class="footer_item">&copy; {{site.site_est_year}} - {{ site.time | date: "%Y" }}</span>
   <small class="footer_copyright">
     john sosoka
   </small>
