fixing weird footer edit

--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<footer class="footer" xmlns="http://www.w3.org/1999/html">
   <a class="footer_item" href="/contact/">contact</a>
   <a class="footer_item" href="https://github.com/johnsosoka">github</a>
   <a class="footer_item" href="/feed.xml">rss</a>
