--- a/website/_includes/contact-me-form.html
+++ b/website/_includes/contact-me-form.html
@@ -1,4 +1,5 @@
-<form form id="FormID" action="{{ site.contact.api.url }}" method="{{ site.contact.api.method }}" >
+<!--<form form id="FormID" action="{{ site.contact.api.url }}" method="{{ site.contact.api.method }}" >-->
+<div id="contactMeForm">
   <ul>
     <li>
       <label for="name">Name:</label>
@@ -13,7 +14,50 @@
       <textarea id="msg" name="user_message"></textarea>
     </li>
     <li class="button">
-      <input type="submit" value="Send your message">
+      <input type="submit"  id="contact_submit" value="Send your message">
     </li>
   </ul>
-</form>
+</div>
+<!--</form>-->
+
+<!-- TODO host own jquery -->
+
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+<script>
+
+  function submitContact(payload) {
+    $.ajax({
+      url : "{{ site.contact.api.url }}",
+      type: "{{ site.contact.api.method }}",
+      dataType: "json",
+      data: payload,
+      success: function(data){
+        console.log(data);
+        alert('successful submit!')
+      },
+      error: function(){
+        console.log("Error in the request");
+        alert('something went wrong.');
+      }
+    });
+  }
+
+  function buildPayload() {
+    var contactMePayload = {
+      contactName : $('#name').val(),
+      contactEmail : $('#mail').val(),
+      contactMessage : $('#msg').val()
+    };
+
+    return JSON.stringify(contactMePayload);
+  }
+
+  $('#contact_submit').click(function() {
+    var payload = buildPayload();
+    console.log(payload);
+    submitContact(payload);
+
+  });
+
+</script>
