--- a/website/_includes/blog_posts.html
+++ b/website/_includes/blog_posts.html
@@ -1,5 +1,5 @@
 <h3 class="posts-item-note" aria-label="Recent Posts">{{ include.post_collection_title }}</h3>
-{%- for post in site.posts limit: include.post_display_limit -%}
+{%- for post in site.categories.blog limit: include.post_display_limit -%}
 <article class="post-item">
     <span class="post-item-date">{{ post.date | date: "%b %d, %Y" }}</span>
     <h4 class="post-item-title">
