--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -149,11 +149,11 @@
     sizes="16x16"
     href="/assets/favicons/favicon-16x16.png"
   />
-  <link rel="manifest" href="/assets/favicons/site.webmanifest" />
   <link
-    rel="mask-icon"
-    href="/assets/favicons/safari-pinned-tab.svg"
-    color="#5bbad5"
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/assets/favicons/safari-pinned-tab.png"
   />
   <meta name="apple-mobile-web-app-title" content="Jekyll Klise" />
   <meta name="application-name" content="Jekyll Klise" />
