--- a/website/_includes/contact-me-form.html
+++ b/website/_includes/contact-me-form.html
@@ -1,53 +1,58 @@
-<!--<form form id="FormID" action="{{ site.contact.api.url }}" method="{{ site.contact.api.method }}" >-->
-<div id="contactMeForm">
-  <ul>
-    <li>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="user_name">
-    </li>
-    <li>
-      <label for="mail">E-mail:</label>
-      <input type="email" id="mail" name="user_email">
-    </li>
-    <li>
-      <label for="msg">Message:</label>
-      <textarea id="msg" name="user_message"></textarea>
-    </li>
-    <li class="button">
-      <input type="submit"  id="contact_submit" value="Send your message">
-    </li>
-  </ul>
-</div>
-<!--</form>-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<!-- TODO host own jquery -->
+<div class="container mt-5">
+  <form id="contactMeForm">
+    <div id="notification" class="alert mt-3" role="alert" style="display: none;"></div>
+    <div class="form-group">
+<!--      <label for="name">Name:</label>-->
+      <input type="text" class="form-control" id="name" name="user_name" placeholder="Name">
+    </div>
+    <div class="form-group">
+<!--      <label for="mail">E-mail:</label>-->
+      <input type="email" class="form-control" id="mail" name="user_email" placeholder="Email">
+    </div>
+    <div class="form-group">
+<!--      <label for="msg">Message:</label>-->
+      <textarea class="form-control" id="msg" name="user_message" placeholder="Message"></textarea>
+    </div>
+    <button type="button" class="btn btn-primary btn-block" id="contact_submit">Send your message</button>
+  </form>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 <script>
-
   function submitContact(payload) {
     $.ajax({
       url : "{{ site.contact.api.url }}",
-      type: "{{ site.contact.api.method }}",
+      type: "POST",
       dataType: "json",
       data: payload,
       success: function(data){
         console.log(data);
-        alert('successful submit!')
+        $('#notification').addClass('alert-success').text('Message Sent!').show();
+        clearForm();
       },
       error: function(){
         console.log("Error in the request");
-        alert('something went wrong.');
+        $('#notification').addClass('alert-danger').text('Something went wrong :(').show();
       }
     });
   }
 
+  function clearForm() {
+    $('#name').val('');
+    $('#mail').val('');
+    $('#msg').val('');
+  }
+
+
   function buildPayload() {
     var contactMePayload = {
-      contactName : $('#name').val(),
-      contactEmail : $('#mail').val(),
-      contactMessage : $('#msg').val()
+      contact_name : $('#name').val(),
+      contact_email : $('#mail').val(),
+      contact_message : $('#msg').val()
     };
 
     return JSON.stringify(contactMePayload);
@@ -57,7 +62,5 @@
     var payload = buildPayload();
     console.log(payload);
     submitContact(payload);
-
   });
-
 </script>
