--- a/website/_sass/main.scss
+++ b/website/_sass/main.scss
@@ -43,7 +43,7 @@ $narrow-size: 720px;
 
 // Padding unit
 $spacing-full: 30px;
-$spacing-half: $spacing-full / 2;
+$spacing-half: 250;
 
 // State of devices
 $on-mobile: 768px;
