--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -159,6 +159,6 @@
   <meta name="application-name" content="Jekyll Klise" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#2c2c2c" />
-
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
