--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -34,5 +34,8 @@ layout: compress
     </main>
     {% include footer.html %}
   </div>
+  <script src="/assets/js/jquery-3.7.0.min.js" defer="defer"></script>
+  <script src="/assets/js/bootstrap.min.js" defer="defer"></script>
+  <script src="/assets/js/main.js" defer="defer"></script>
 </body>
 </html>
