--- a/website/_includes/contact-me-form.html
+++ b/website/_includes/contact-me-form.html
@@ -1,5 +1,6 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5">
   <form id="contactMeForm">
+      <!-- Alert on Success/Failure -->
     <div id="notification" class="alert mt-3" role="alert" style="display: none;"></div>
     <div class="form-group">
 <!--      <label for="name">Name:</label>-->
@@ -15,10 +16,9 @@
     </div>
     <button type="button" class="btn btn-primary btn-block" id="contact_submit">Send your message</button>
   </form>
-
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>-->
 
 <script>
   function submitContact(payload) {
