--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -1,12 +1,16 @@
-<footer class="footer" xmlns="http://www.w3.org/1999/html">
-  <a class="footer_item" href="/contact/">contact</a>
-  <a class="footer_item" href="https://github.com/johnsosoka">github</a>
-  <a class="footer_item" href="/feed.xml">rss</a>
-  <small class="footer_copyright">
-    john sosoka</br>
+<footer class="footer bg-transparent mt-auto py-3 text-light">
+  <div class="container text-center">
+    <a class="mb-1 mx-2 footer_item" href="/contact/">Contact</a>
+    <a class="mb-1 mx-2 footer_item" href="https://github.com/johnsosoka">Github</a>
+    <a class="mb-1 mx-2 footer_item" href="/feed.xml">RSS</a>
+  </div>
+  <small class="copyright-text">
+    John Sosoka<br>
     &copy; {{site.site_est_year}} - {{ site.time | date: "%Y" }}
   </small>
 </footer>
+
+
 
 
 {%- if page.url == '/archive/' -%}
