--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -161,4 +161,6 @@
   <meta name="theme-color" content="#2c2c2c" />
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="/assets/js/bootstrap.js"></script>
 </head>
