--- a/website/_layouts/page.html
+++ b/website/_layouts/page.html
@@ -7,33 +7,33 @@ layout: compress
 
 {% include header.html %}
 
-<body data-theme="{{ site.mode }}" class="notransition">
+<body class="notransition">
 
-  <script>
-    const body = document.body;
-    const data = body.getAttribute("data-theme");
+<!--  <script>-->
+<!--    const body = document.body;-->
+<!--    const data = body.getAttribute("data-theme");-->
 
-    const initTheme = (state) => {
-      if (state === "dark") {
-        body.setAttribute("data-theme", "dark");
-      } else if (state === "light") {
-        body.removeAttribute("data-theme");
-      } else {
-        localStorage.setItem("theme", data);
-      }
-    };
- 
-    initTheme(localStorage.getItem("theme"));
-    
-    setTimeout(() => body.classList.remove("notransition"), 75);
-  </script>
+<!--    const initTheme = (state) => {-->
+<!--      if (state === "dark") {-->
+<!--        body.setAttribute("data-theme", "dark");-->
+<!--      } else if (state === "light") {-->
+<!--        body.removeAttribute("data-theme");-->
+<!--      } else {-->
+<!--        localStorage.setItem("theme", data);-->
+<!--      }-->
+<!--    };-->
+<!-- -->
+<!--    initTheme(localStorage.getItem("theme"));-->
+<!--    -->
+<!--    setTimeout(() => body.classList.remove("notransition"), 75);-->
+<!--  </script>-->
 
   {% include navbar.html %}
   <div class="wrapper">
     <header class="header">
       <h1 class="header-title center" itemprop="headline">{{ page.title | escape }}.</h1>
     </header>
-    <main class="page-content" aria-label="Content">
+    <main class="flex-grow-1 page-content" aria-label="Content">
       {% include anchor_headings.html html=content anchorClass="anchor-head" beforeHeading=true h_min=4 h_max=4 %}
     </main>
     {% include footer.html %}
