--- a/website/_sass/klise/_layout.scss
+++ b/website/_sass/klise/_layout.scss
@@ -11,6 +11,29 @@
   @extend %clearfix;
 }
 
+.navbar .dropdown-menu {
+  background-color: #343a40; /* Change this to your desired color */
+  color: $dark-white; /* Change this to your desired text color */
+}
+
+.navbar-toggler {
+  margin-left: auto;
+}
+
+.copyright-text {
+  color: #aaa; /* Adjust this to the color you want */
+}
+
+
+//.navbar-collapse {
+//  position: absolute;
+//  top: 100%;
+//  justify-content: center;
+//  align-items: center;
+//  transition: height 0.3s ease-out;
+//}
+
+
 // Navigation
 .menu {
   user-select: none;
@@ -282,32 +305,26 @@
   }
 }
 
+
 // Footer
 .footer {
   margin-top: 8em;
   margin-bottom: 2em;
   text-align: center;
 
-  @include media-query($on-mobile) {
-    margin-top: 3em;
-  }
+
   span.footer_item {
     color: $black;
     opacity: 0.8;
     font-weight: $bold-weight;
     font-size: $small-font-size;
+    text-decoration: none;
   }
+
   a.footer_item {
     color: $black;
     opacity: 0.8;
     text-decoration: none;
-
-    &:not(:last-child) {
-      margin-right: 10px;
-      &:hover {
-        opacity: 1;
-      }
-    }
   }
 
   .footer_copyright {
