--- a/website/_sass/klise/_theme.scss
+++ b/website/_sass/klise/_theme.scss
@@ -1,13 +1,23 @@
-body[data-theme="dark"] {
+body {
   color: $dark-text-base-color;
   background-color: $dark-black;
 
   // Heading
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
+  h1 {
+    color: $dark-white;
+  }
+  h2 {
+    color: $dark-white;
+  }
+  h3 {
+    color: $dark-white;
+  }
+  h4 {
+    color: $dark-white;
+  }
+  h5 {
+    color: $dark-white;
+  }
   h6 {
     color: $dark-white;
   }
@@ -41,11 +51,21 @@ body[data-theme="dark"] {
     h3 {
       border-color: $dark-light;
     }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
+    h1 {
+      color: $dark-white;
+    }
+    h2 {
+      color: $dark-white;
+    }
+    h3 {
+      color: $dark-white;
+    }
+    h4 {
+      color: $dark-white;
+    }
+    h5 {
+      color: $dark-white;
+    }
     h6 {
       .anchor-head {
         color: $dark-text-link-blue;
@@ -85,6 +105,11 @@ body[data-theme="dark"] {
     span[itemprop="author"] {
       border-color: $dark-light;
     }
+
+    span[itemprop="name"] {
+      border-color: $dark-light;
+      color: #3e4a70;
+    }
   }
 
   // Link
@@ -97,7 +122,7 @@ body[data-theme="dark"] {
     }
 
     &:focus {
-      outline-color: rgba(255, 82, 119, 0.6);
+      outline-color: rgba(224, 63, 105, 0.6);
     }
   }
 
@@ -225,7 +250,7 @@ body[data-theme="dark"] {
     span.footer_item {
       color: $dark-white;
     }
-    a.footer_item:not(:last-child) {
+    a.footer_item {
       color: $dark-white;
     }
     .footer_copyright {
@@ -249,7 +274,7 @@ body[data-theme="dark"] {
     .solution:hover {
       color: $dark-text-link-blue-active;
     }
-  }  
+  }
 
   .search-article {
     input[type="search"] {
@@ -260,3 +285,4 @@ body[data-theme="dark"] {
     }
   }
 }
+
