--- a/website/_sass/main.scss
+++ b/website/_sass/main.scss
@@ -70,5 +70,5 @@ $on-widescreen: 1152px;
 }
 
 // Import sass files
-@import "klise/fonts", "klise/base", "klise/layout", "klise/post",
-  "klise/miscellaneous", "klise/syntax", "klise/theme";
+@import "sosleek/fonts", "sosleek/base", "sosleek/layout", "sosleek/post",
+"sosleek/miscellaneous", "sosleek/syntax", "sosleek/theme";
