--- a/website/_layouts/404.html
+++ b/website/_layouts/404.html
@@ -1,33 +1,8 @@
 ---
-layout: compress
+layout: new_default
 ---
 
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en " }}">
-
-{% include header.html %}
-<body data-theme="{{ site.mode }}" class="notransition">
-
-  <script>
-    const body = document.body;
-    const data = body.getAttribute("data-theme");
-
-    const initTheme = (state) => {
-      if (state === "dark") {
-        body.setAttribute("data-theme", "dark");
-      } else if (state === "light") {
-        body.removeAttribute("data-theme");
-      } else {
-        localStorage.setItem("theme", data);
-      }
-    };
- 
-    initTheme(localStorage.getItem("theme"));
-    
-    setTimeout(() => body.classList.remove("notransition"), 75);
-  </script>
-
-  {% include navbar.html %}
+<body class="notransition">
   <div class="wrapper">
     <main aria-label="Content">
       <div class="not-found">
@@ -37,10 +12,8 @@ layout: compress
           <a class="solution" href="{{ site.url }}">back home</a>
         </div>
       </div>
-    </main>  
-    {% include footer.html %}
+    </main>
   </div>
-    
 </body>
 
 </html>
