--- a/website/_layouts/note.html
+++ b/website/_layouts/note.html
@@ -1,34 +1,9 @@
 ---
-layout: compress
+layout: new_default
 ---
 
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<body class="notransition">
 
-{% include header.html %}
-
-<body data-theme="{{ site.mode }}" class="notransition">
-
-<script>
-    const body = document.body;
-    const data = body.getAttribute("data-theme");
-
-    const initTheme = (state) => {
-        if (state === "dark") {
-            body.setAttribute("data-theme", "dark");
-        } else if (state === "light") {
-            body.removeAttribute("data-theme");
-        } else {
-            localStorage.setItem("theme", data);
-        }
-    };
-
-    initTheme(localStorage.getItem("theme"));
-
-    setTimeout(() => body.classList.remove("notransition"), 75);
-</script>
-
-{% include navbar.html %}
 <div class="wrapper post">
     <main class="page-content" aria-label="Content">
         <article itemscope itemtype="https://schema.org/BlogPosting">
@@ -65,19 +40,9 @@ layout: compress
             </header>
 
             <div class="page-content" itemprop="articleBody">
-                {% include anchor_headings.html html=content anchorClass="anchor-head" beforeHeading=true h_min=1 h_max=4 %}
-                {% if page.tweet %}
-                <p>Comments this article on
-                    <a href="https://twitter.com/{{site.twitter}}/status/{{page.tweet}}">Twitter</a>.
-                </p>
-                {% endif %}
+                {{ content }}
             </div>
         </article>
-
-        {% if page.comments %}
-        {% include comments.html %}
-        {% endif %}
-
     </main>
 
     {% if page.modified %}
@@ -87,7 +52,6 @@ layout: compress
     {% include navigation.html %}
     {% endif %}
 
-    {% include footer.html %}
 </div>
 </body>
 
