--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -1,34 +1,11 @@
 ---
-layout: compress
+layout: new_default
 ---
 
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-{% include header.html %}
+<body class="notransition">
 
-<body data-theme="{{ site.mode }}" class="notransition">
 
-  <script>
-    const body = document.body;
-    const data = body.getAttribute("data-theme");
-
-    const initTheme = (state) => {
-      if (state === "dark") {
-        body.setAttribute("data-theme", "dark");
-      } else if (state === "light") {
-        body.removeAttribute("data-theme");
-      } else {
-        localStorage.setItem("theme", data);
-      }
-    };
- 
-    initTheme(localStorage.getItem("theme"));
-    
-    setTimeout(() => body.classList.remove("notransition"), 75);
-  </script>
-
-  {% include navbar.html %}
   <div class="wrapper post">
     <main class="page-content" aria-label="Content">
       <article itemscope itemtype="https://schema.org/BlogPosting">
@@ -73,11 +50,6 @@ layout: compress
           {% endif %}
         </div>
       </article>
-    
-      {% if page.comments %}
-        {% include comments.html %}
-      {% endif %}
-
     </main>
 
     {% if page.modified %}
@@ -86,9 +58,6 @@ layout: compress
     {% if page.next or page.previous %}
       {% include navigation.html %}
     {% endif %}
-
-    {% include footer.html %}
-
   </div>
 </body>
 </html>
