--- a/website/_sass/sosleek/_theme.scss
+++ b/website/_sass/sosleek/_theme.scss
@@ -22,6 +22,11 @@ body {
     color: $dark-white;
   }
 
+  /** for `code tags` **/
+  code {
+    color: #2881d3;
+  }
+
   // Table
   table {
     thead {
@@ -150,6 +155,13 @@ body {
     color: $dark-white;
   }
 
+
+
+  .dropdown-item {
+    position: relative;
+    background: transparent;
+    color: whitesmoke;
+  }
   // Navbar
   .navbar {
     border-color: $dark-light;
@@ -162,6 +174,8 @@ body {
           display: none;
         }
       }
+
+
 
       .menu-link {
         color: $dark-white;
