--- a/website/_layouts/lore.html
+++ b/website/_layouts/lore.html
@@ -8,7 +8,7 @@ layout: new_default
         <h1 class="header-title center" itemprop="headline">{{ page.title | escape }}.</h1>
     </header>
     <main class="page-content" aria-label="Content">
-        {% include anchor_headings.html html=content anchorClass="anchor-head" beforeHeading=true h_min=4 h_max=4 %}
+        {{ content }}
         <script>
             document.write('<a href="' + document.referrer + '">{{ site.lore_go_back_text }}</a>');
         </script>
