--- a/website/_layouts/new_default.html
+++ b/website/_layouts/new_default.html
@@ -7,7 +7,10 @@
     <title>{{ page.title }}</title>
 </head>
 <body>
+<!-- Shared/Common Styles -->
 {% include header.html %}
+
+<!-- Site Navigation -->
 {% include navbar.html %}
 
 {{ content }}
