--- a/website/_layouts/note.html
+++ b/website/_layouts/note.html
@@ -4,55 +4,12 @@ layout: new_default
 
 <body class="notransition">
 
-<div class="wrapper post">
-    <main class="page-content" aria-label="Content">
-        <article itemscope itemtype="https://schema.org/BlogPosting">
-
-            <header class="header">
-                {% if page.tags and page.tags != empty %}
-                <div class="tags">
-                    {% assign tags = page.tags %}
-                    <span itemprop="keywords">
-              {% for tag in tags %}
-              <a class="tag"
-                 href="/tags/#{{tag | downcase | slugify}}">{{tag | upcase }}</a>{% unless forloop.last %},{% endunless %}
-              {% endfor %}
-            </span>
-                </div>
-                {% endif %}
-                <h1 class="header-title" itemprop="headline">{{ page.title | escape }}</h1>
-                {% if page.date %}
-                <div class="post-meta">
-                    <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-                        {{ page.date | date: "%b %d, %Y" }}
-                    </time>
-                    <span itemprop="author" itemscope itemtype="https://schema.org/Person">
-              <span itemprop="name">{{ site.author.name }}</span>
-            </span>
-                    <time hidden datetime="{{ page.modified | date_to_xmlschema }}" itemprop="dateModified">
-                        {{ page.date | date: "%b %d, %Y" }}
-                    </time>
-                    <span hidden itemprop="publisher" itemtype="Person">{{ site.author.name }}</span>
-                    <span hidden itemprop="image">{{ page.image }}</span>
-                    <span hidden itemprop="mainEntityOfPage">{{ page.excerpt }}</span>
-                </div>
-                {% endif %}
-            </header>
-
-            <div class="page-content" itemprop="articleBody">
-                {{ content }}
-            </div>
-        </article>
+<div class="wrapper">
+    <header class="header">
+        <h1 class="header-title center" itemprop="headline">{{ page.title | escape }}.</h1>
+    </header>
+    <main class="flex-grow-1 page-content" aria-label="Content">
+        {{ content }}
     </main>
-
-    {% if page.modified %}
-    <small class="post-updated-at">updated_at {{page.modified | date: "%d-%m-%Y"}}</small>
-    {% endif %}
-    {% if page.next or page.previous %}
-    {% include navigation.html %}
-    {% endif %}
-
 </div>
 </body>
-
-</html>
