--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -155,8 +155,8 @@
     sizes="16x16"
     href="/assets/favicons/safari-pinned-tab.png"
   />
-  <meta name="apple-mobile-web-app-title" content="Jekyll Klise" />
-  <meta name="application-name" content="Jekyll Klise" />
+  <meta name="apple-mobile-web-app-title" content="johnsosoka.com" />
+  <meta name="application-name" content="johnsosoka.com" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#2c2c2c" />
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
