trying to clean up css, expanded thanks page

--- a/website/_includes/scripts.html
+++ b/website/_includes/scripts.html
@@ -9,3 +9,7 @@ Scripts that are loaded in the footer of the page.
 <script src="/assets/js/bootstrap.min.js" defer="defer"></script>
 
 <script src="/assets/js/main.js" defer="defer"></script>
+
+<script src="/assets/js/popper.min.js"></script>
+
+<script src="/assets/js/bootstrap.js"></script>
