--- a/website/_sass/sosleek/_layout.scss
+++ b/website/_sass/sosleek/_layout.scss
@@ -12,17 +12,14 @@
 }
 
 .navbar .dropdown-menu {
-  background-color: #343a40; /* Change this to your desired color */
-  color: $dark-white; /* Change this to your desired text color */
+  background-color: #343a40;
+  color: $dark-white;
 }
 
 .navbar-toggler {
   margin-left: auto;
 }
 
-.copyright-text {
-  color: #aaa; /* Adjust this to the color you want */
-}
 
 
 //.navbar-collapse {
@@ -327,82 +324,9 @@
     text-decoration: none;
   }
 
-  .footer_copyright {
-    font-size: $small-font-size - 1;
-    margin-top: 3px;
-    display: block;
-    color: $gray;
-    opacity: 0.8;
-  }
+
 }
 
-.not-found {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 75vh;
-  .title {
-    font-size: 5em;
-    font-weight: $bold-weight;
-    line-height: 1.1;
-    color: $black;
-    text-shadow: 1px 0px 0px $text-link-blue;
-  }
-  .phrase {
-    color: $text-base-color;
-  }
-  .solution {
-    color: $text-link-blue;
-    letter-spacing: 0.5px;
-  }
-  .solution:hover {
-    color: $text-link-blue-active;
-  }
-}
-
-
-.search-article {
-  position: relative;
-  margin-bottom: 50px;
-
-  label[for="search-input"] {
-    position: relative;
-    top: 10px;
-    left: 11px;
-  }
-
-  input[type="search"] {
-    top: 0;
-    left: 0;
-    border: 0;
-    width: 100%;
-    height: 40px;
-    outline: none;
-    position: absolute;
-    border-radius: 5px;
-    padding: 10px 10px 10px 35px;
-    color: $text-base-color;
-    -webkit-appearance: none;
-    font-size: $base-font-size;
-    background-color: rgba(128, 128, 128, 0.1);
-    border: 1px solid rgba(128, 128, 128, 0.1);
-    &::-webkit-input-placeholder {
-      color: #808080;
-    }
-    &::-webkit-search-decoration,
-    &::-webkit-search-results-decoration {
-      display: none;
-    }
-  }
-}
-
-#search-results {
-  text-align: center;
-  li {
-    text-align: left;
-  }
-}
 
 .archive-tags {
   height: auto;
