--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -3,9 +3,12 @@ layout: default
 home: true
 ---
 
-<main class="page-content d-flex justify-content-center align-items-center" aria-label="Content">
-    <div class="text-left">
-        {% include author.html %}
-        {{ content }}
-    </div>
-</main>
+<div class="wrapper">
+    <main class="page-content d-flex justify-content-center align-items-center" aria-label="Content">
+        <div class="text-left">
+            {% include author.html %}
+            {{ content }}
+        </div>
+    </main>
+</div>
+
