--- a/website/_includes/post_navigation.html
+++ b/website/_includes/post_navigation.html
@@ -1,16 +1,18 @@
-<nav class="post-nav">
-  {% if page.previous %}
-  <a
-    class="post-nav-item post-nav-prev"
-    href="{{ page.previous | relative_url }}"
-  >
-    <div class="nav-arrow">Previous</div>
-    <span class="post-title">{{ page.previous.title }}</span>
-  </a>
-  {% endif %} {% if page.next %}
-  <a class="post-nav-item post-nav-next" href="{{ page.next | relative_url }}">
-    <div class="nav-arrow">Next</div>
-    <span class="post-title">{{ page.next.title }}</span>
-  </a>
-  {% endif %}
-</nav>
+<div class="row">
+  <div class="col text-left">
+    {% if page.previous %}
+    <a class="post-nav-item post-nav-prev" href="{{ page.previous | relative_url }}">
+      <div class="nav-arrow">Previous</div>
+      <span class="post-title">{{ page.previous.title }}</span>
+    </a>
+    {% endif %}
+  </div>
+  <div class="col text-right">
+    {% if page.next %}
+    <a class="post-nav-item post-nav-next" href="{{ page.next | relative_url }}">
+      <div class="nav-arrow">Next</div>
+      <span class="post-title">{{ page.next.title }}</span>
+    </a>
+    {% endif %}
+  </div>
+</div>
