--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -40,6 +40,8 @@ layout: default
     <main class="flex-grow-1 page-content" aria-label="Content">
         {{ content }}
     </main>
+
+    {% include post_navigation.html %}
 </div>
 
 </body>
