--- a/website/_sass/pages/_post.scss
+++ b/website/_sass/pages/_post.scss
@@ -1,14 +1,14 @@
-// Post wrapper
-.wrapper.post {
-  @include media-query($on-mobile) {
-    padding-left: $spacing-half;
-    padding-right: $spacing-half;
-  }
-}
+/* Post Wrapper */
+//.wrapper.post {
+//  @include media-query($on-mobile) {
+//    padding-left: $spacing-half;
+//    padding-right: $spacing-half;
+//  }
+//}
 
-// Post title
+/* Post Title / Header */
 .header {
-  margin-top: 7.8em;
+  margin-top: 1em;
   margin-bottom: 3em;
 
   .tags {
@@ -18,6 +18,7 @@
     .tag {
       font-weight: $bold-weight;
       font-size: $small-font-size - 2;
+      color: $dark-text-link-blue;
 
       &:hover {
         text-decoration: none;
@@ -37,6 +38,33 @@
 
     @include media-query($on-mobile) {
       font-size: 1.9em;
+    }
+  }
+}
+
+/* Header Subtitle / Author Segment */
+
+/* Change the color of the author name and date */
+.header-subtitle [itemprop="name"],
+.header-subtitle [itemprop="publishDate"] {
+  color: $grey-blue;
+}
+
+/* Adjust the margin of the header-subtitle div */
+.header-subtitle {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.page-content {
+  a {
+    // Link Color
+    color: $darker-text-link-blue;
+    &:hover,
+    &:active,
+    &:focus {
+      // On Hover Color
+      color: $darker-blue-grey;
     }
   }
 }
