universal fonts, navbar, footer cleanup, added tables css

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-home: true
 ---
 
 <div class="wrapper">
     <main class="page-content d-flex justify-content-center align-items-center" aria-label="Content">
         <div class="text-left">
-            {% include author.html %}
+            {% include john_landing.html %}
             {{ content }}
         </div>
     </main>
