--- a/website/_layouts/post.html
+++ b/website/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <body class="notransition">
 
-<div class="wrapper">
+<div class="wrapper post">
     <header class="header">
         {% if page.tags and page.tags != empty %}
         <div class="tags">
