--- a/website/_sass/component/_author.scss
+++ b/website/_sass/component/_author.scss
@@ -1,6 +1,6 @@
 // Author
-.author {
-  margin-top: 6.3rem;
+.john-landing {
+  margin-top: 3.3rem;
   margin-bottom: $homepage-author-bottom-buffer;
   text-align: center;
 
