--- a/website/_layouts/page.html
+++ b/website/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <body class="notransition">
 
-  <div class="wrapper">
+  <div class="wrapper page">
     <header class="header">
       <h1 class="header-title center" itemprop="headline">{{ page.title | escape }}.</h1>
     </header>
