--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -17,7 +17,7 @@
         </div>
     </header>
 
-    <main class="body row justify-content-center">
+    <main class="body row justify-content-center flex-grow-1">
         <div class="col-lg-8">
             <!-- Page Content -->
             {{ content }}
