minor page edits, wrapping up work. prepping for stage review

--- a/website/_sass/pages/_post.scss
+++ b/website/_sass/pages/_post.scss
@@ -52,6 +52,6 @@
   .header-subtitle {
     margin-top: 1px;
     margin-bottom: 25px;
-    text-align: right; /* Add this line to align the subtitle to the right */
+    text-align: left;
   }
 }
