--- a/website/_includes/navbar.html
+++ b/website/_includes/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler"
-          type="button" data-toggle="collapse"
-          data-target="#navbarNav"
+          type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation">
