bootstrap dropdown menu issue resolved

--- a/website/_includes/navbar.html
+++ b/website/_includes/navbar.html
@@ -16,7 +16,7 @@
       {%- for menu in menus -%}
       {%- if menu.subitems -%}
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           {{ menu.title }}
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
