using self hosted jquery in contact form, fixing table coloring & adjust retired about link

--- a/website/_includes/contact-me-form.html
+++ b/website/_includes/contact-me-form.html
@@ -15,8 +15,8 @@
   </form>
 </div>
 
-<!-- TODO - this isn't working with my self hosted jquery?? -->
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<!-- TODO - this isn't working when using the scripts.html include ... -->
+<script src="/assets/js/jquery-3.7.0.min.js"></script>
 
 <script>
   function submitContact(payload) {
@@ -60,3 +60,5 @@
     submitContact(payload);
   });
 </script>
+
+<!-- TODO - this isn't working with my self hosted jquery?? -->
