--- a/website/_includes/scripts.html
+++ b/website/_includes/scripts.html
@@ -1,6 +1,6 @@
 <!--
 
-Scripts that are loaded in the footer of the page.
+Scripts that are loaded throughout the website
 
 -->
 
@@ -8,8 +8,9 @@ Scripts that are loaded in the footer of the page.
 
 <script src="/assets/js/bootstrap.min.js" defer="defer"></script>
 
-<script src="/assets/js/main.js" defer="defer"></script>
-
 <script src="/assets/js/popper.min.js"></script>
 
 <script src="/assets/js/bootstrap.js"></script>
+
+<!-- TODO contact form page & move this to more local include? (it's only needed on 1 page)-->
+<!--<script src="/assets/js/contact.js"></script>-->
