--- a/website/_sass/themes/_jscom.scss
+++ b/website/_sass/themes/_jscom.scss
@@ -34,7 +34,7 @@ body {
 
   // Blockquote
   blockquote {
-    color: $dark-gray;
+    color: $darker-white;
     border-color: $dark-light;
   }
 
