--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="wrapper">
+<div class="wrapper home">
     <main class="page-content d-flex justify-content-center align-items-center" aria-label="Content">
         <div class="text-left">
             {% include john_landing.html %}
