--- a/website/_sass/themes/_jscom.scss
+++ b/website/_sass/themes/_jscom.scss
@@ -5,22 +5,22 @@ body {
 
   // Heading
   h1 {
-    color: $dark-white;
+    color: $smoke;
   }
   h2 {
-    color: $dark-white;
+    color: $smoke;
   }
   h3 {
-    color: $dark-white;
+    color: $smoke;
   }
   h4 {
-    color: $dark-white;
+    color: $smoke;
   }
   h5 {
-    color: $dark-white;
+    color: $smoke;
   }
   h6 {
-    color: $dark-white;
+    color: $smoke;
   }
 
   /** for `code tags` **/
