--- a/website/_includes/navbar.html
+++ b/website/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
   <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler"
           type="button" data-toggle="collapse"
