--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -134,25 +134,25 @@
   <link
     rel="apple-touch-icon"
     sizes="180x180"
-    href="/assets/favicons/apple-touch-icon.png"
+    href="https://media.johnsosoka.com/old/favicons/apple-touch-icon.png"
   />
   <link
     rel="icon"
     type="image/png"
     sizes="32x32"
-    href="/assets/favicons/favicon-32x32.png"
+    href="https://media.johnsosoka.com/assets/favicons/favicon-32x32.png"
   />
   <link
     rel="icon"
     type="image/png"
     sizes="16x16"
-    href="/assets/favicons/favicon-16x16.png"
+    href="https://media.johnsosoka.com/assets/favicons/favicon-16x16.png"
   />
   <link
     rel="icon"
     type="image/png"
     sizes="16x16"
-    href="/assets/favicons/safari-pinned-tab.png"
+    href="https://media.johnsosoka.com/old/favicons/safari-pinned-tab.png"
   />
   <meta name="apple-mobile-web-app-title" content="johnsosoka.com" />
   <meta name="application-name" content="johnsosoka.com" />
