other pages navbar and alignment issues are resolved

--- a/website/_layouts/404.html
+++ b/website/_layouts/404.html
@@ -40,7 +40,7 @@ layout: compress
     </main>  
     {% include footer.html %}
   </div>
-    
+     <script src="/assets/js/bootstrap.bundle.min.js" defer="defer"></script>
 </body>
 
 </html>
