--- a/website/_layouts/page.html
+++ b/website/_layouts/page.html
@@ -38,6 +38,7 @@ layout: compress
     </main>
     {% include footer.html %}
   </div>
+   <script src="/assets/js/bootstrap.bundle.min.js" defer="defer"></script>
 </body>
 
 </html>
