unused css removed

--- a/website/_sass/main.scss
+++ b/website/_sass/main.scss
@@ -73,5 +73,4 @@ $on-widescreen: 1152px;
   margin-left: 50%;
 }
 // Import sass files
-@import "klise/fonts", "klise/base", "klise/layout", "klise/post",
-  "klise/miscellaneous", "klise/syntax", "klise/dark";
+@import "klise/fonts", "klise/base", "klise/layout", "klise/post", "klise/syntax", "klise/dark";
